--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.8.2",
